@@ -1,7 +1,7 @@
-FROM bellsoft/liberica-openjdk-alpine:latest
+FROM bellsoft/liberica-openjdk-alpine:17
 MAINTAINER oliver egger <oliver.egger@ahdis.ch>
 EXPOSE 9090
-EXPOSE 9091
+#EXPOSE 9091
 VOLUME /tmp
 
 ARG JAR_FILE=target/mobile-access-gateway-1.0-SNAPSHOT-spring-boot.jar
@@ -10,7 +10,7 @@ ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en' LC_ALL='en_US.UTF-8'
 
 COPY ${JAR_FILE} /app.jar
 
-ENTRYPOINT java -Xmx1G -jar /app.jar -Djavax.net.ssl.trustStore=cacerts -Djavax.net.ssl.trustStorePassword=changeit -Dspring.config.additional-location=optional:file:/config/application.yml
+ENTRYPOINT java -Xmx1G -jar /app.jar -Djavax.net.ssl.trustStore=cacerts -Djavax.net.ssl.trustStorePassword=changeit -Djava.security.manager=allow -Dspring.config.additional-location=optional:file:/config/application.yml
 
 
 # export PROJECT_ID="$(gcloud config get-value project -q)"
